[workspace]
members = ["bevy_rapier2d", "bevy_rapier3d"]

[profile.release]
codegen-units = 1

[patch.crates-io]
bevy = { git = 'https://github.com/bevyengine/bevy.git', branch = 'pipelined-rendering' }
#nalgebra = { path = "../nalgebra" }
#parry2d = { path = "../parry/build/parry2d" }
#parry3d = { path = "../parry/build/parry3d" }
#rapier2d = { path = "../rapier/build/rapier2d" }
#rapier3d = { path = "../rapier/build/rapier3d" }

#rapier2d = { git = "https://github.com/dimforge/rapier" }
#rapier3d = { git = "https://github.com/dimforge/rapier" }
